default.css: fix paragraphs with scrollbars

--- a/css/default.css
+++ b/css/default.css
@@ -275,7 +275,7 @@
         padding-left: 20px;
         text-transform: uppercase;
         font-size: 0.75em;
-        line-height: 1.3;
+        line-height: 1.5;
     }
 
     /* pull the RSS/EMAIL links together */
@@ -408,6 +408,8 @@ body {
     margin: 0 10px 0 0;
     max-width: 1400px;
 }
+
+#markdownBody { overflow-wrap: break-word; }
 
 /* HEADER H1-6 HIERARCHY */
 h1, h2, h3, h4, h5, h6 { margin: 1.5em 0 0.75em 0; }
